alert fixed, fields aligned, horizontal scroll fixed

--- a/admin/css/alert.css
+++ b/admin/css/alert.css
@@ -1,6 +1,9 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  overflow-x: hidden;
+}
 .heading {
   position: relative;
   width: 149px;
@@ -40,6 +43,11 @@ form {
   margin-top: 5px;
   margin-bottom: 5px;
 }
+.form-group textarea-label {
+  text-align: left;
+  display: block;
+  padding-left: 15px;
+}
 form input {
   width: 75%;
   height: 15px;
@@ -66,23 +74,23 @@ form input {
   *overflow: hidden;
   text-align: center;
   font-weight: 100;
+  color: #464646;
 }
 
 .form-group select {
   display: grid;
-  grid-template-columns: 100px 50fr;
-  height: 1rem;
+  grid-template-columns: 100px 40fr;
+  height: 1.7rem;
   width: 75%;
   border: none;
-  float: right;
   outline: none;
-  border-radius: 8px;
   font-weight: 100;
   text-align: left;
-  font-size: 15px;
-  line-height: 10px;
-  margin-left: 45px;
-  margin: 10px;
+  padding: 0;
+  margin: 0;
+  margin-left: 55px;
+  padding-left: 10px;
+  color: #706c6c;
 }
 
 .submit {
@@ -97,7 +105,7 @@ form input {
   border-radius: 10px;
   font-weight: bold;
   margin-top: 50px;
-  top: 580px;
+  top: 500px;
   left: 40%;
   position: absolute;
   text-align: center;
@@ -124,8 +132,8 @@ form input {
   }
   .form-group select {
     width: 75%;
-    margin: 10px;
-    height: 15px;
+    margin: 23px;
+    height: 28px;
     font-size: 18px;
   }
   .submit {
@@ -153,11 +161,11 @@ form input {
   }
   .form-group select {
     width: 75%;
-    margin: 10px;
-
-    height: 1rem;
+    margin: 23px;
+    height: 28px;
     font-size: 18px;
   }
+
   .submit {
     margin-top: 60px;
     width: 15%;
@@ -183,8 +191,8 @@ form input {
   }
   .form-group select {
     width: 75%;
-    margin: 10px;
-    height: 1rem;
+    margin: 23px;
+    height: 28px;
     font-size: 18px;
   }
   .submit {
@@ -212,8 +220,8 @@ form input {
   }
   .form-group select {
     width: 75%;
-    margin: 10px;
-    height: 1rem;
+    margin: 23px;
+    height: 28px;
     font-size: 18px;
   }
   .submit {
@@ -241,8 +249,8 @@ form input {
   }
   .form-group select {
     width: 75%;
-    margin: 10px;
-    height: 1rem;
+    margin: 23px;
+    height: 28px;
     font-size: 18px;
   }
   .submit {
@@ -270,8 +278,8 @@ form input {
   }
   .form-group select {
     width: 75%;
-    margin: 10px;
-    height: 1rem;
+    margin: 23px;
+    height: 28px;
     font-size: 18px;
   }
   .submit {
